# bitrix_gptbot

./: loggers.py  pyproject.toml
db/: db_handlers.py
src/: bitrix_chat.py  gpt_free_bot.py  main.py  utils.py
